Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
   <div class="wrap">
-    <div class="badge">🧧 WKNDMOOD × Mashcore · 복조리 깜짝 이벤트</div>
+    <div class="badge">🧧 WKNDMOOD 복조리 깜짝 이벤트</div>
     <h1>일요일 하루, 선착순으로 “복(혜택)”을 가져가세요.</h1>
     <p>이벤트 오픈 시간에 <b>복조리 열기</b> 버튼이 활성화됩니다. 남은 수량이 보이는 순간, 이미 반은 성공입니다.</p>
 
@@ -155,3 +155,4 @@
   </script>
 </body>
 </html>
+
