--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
   <div class="wrap">
     <div class="badge">🧧 WKNDMOOD 복조리 깜짝 이벤트</div>
-    <h1>일요일 하루, 선착순으로 “복(혜택)”을 가져가세요.</h1>
+    <h1>설연휴 마지막 찬스, 선착순으로 “복(혜택)”을 가져가세요.</h1>
     <p>이벤트 오픈 시간에 <b>복조리 열기</b> 버튼이 활성화됩니다. 남은 수량이 보이는 순간, 이미 반은 성공입니다.</p>
 
     <div class="grid">
@@ -50,9 +50,9 @@
         <div class="row" style="align-items:flex-start;">
           <div style="flex:1; min-width:240px;">
             <div class="big">닉네임(오픈톡 이름)만 적고 참여</div>
-            <div class="tiny">※ 중복 수령 방지를 위해 서버에서 IP 기반 “1회 클레임”을 기본 적용합니다(완벽하진 않지만 실전에서 꽤 잘 막습니다). :contentReference[oaicite:3]{index=3}</div>
+            <div class="tiny">※ 중복 수령 방지를 위해 서버에서 IP 기반 “1회 클레임”을 기본 적용합니다. </div>
             <div style="height:10px"></div>
-            <input id="nickname" maxlength="20" placeholder="예) 규현 / Charlie / Mashcore" />
+            <input id="nickname" maxlength="20" placeholder="예) 닉네임 / 키 / 몸무게 />
             <div style="height:10px"></div>
             <button id="btn" disabled>복조리 열기 🧧</button>
           </div>
@@ -81,8 +81,6 @@
         </div>
         <div class="sep"></div>
         <div class="tiny">
-          운영 팁: “복조리 오픈” 문구를 오픈톡 상단 공지로 걸고,<br/>
-          오픈 시간 10분 전부터 <b>카운트다운</b> 안내하면 참여율이 훅 올라갑니다.
         </div>
       </div>
     </div>
@@ -155,4 +153,5 @@
   </script>
 </body>
 </html>
+
 
