--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="tiny">※ 중복 수령 방지를 위해 서버에서 IP 기반 “1회 클레임”을 기본 적용합니다. </div>
             <div style="height:10px"></div>
             <input id="nickname" maxlength="20" placeholder="예) 닉네임 / 키 / 몸무게 />
-            <div style="height:10px"></div>
+           </div>
             <button id="btn" disabled>복조리 열기 🧧</button>
           </div>
 
@@ -153,5 +153,6 @@
   </script>
 </body>
 </html>
+
 
 
