--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="row" style="align-items:flex-start;">
           <div style="flex:1; min-width:240px;">
             <div class="big">닉네임(오픈톡 이름)만 적고 참여</div>
-            <div class="tiny">※ 중복 수령 방지를 위해 서버에서 IP 기반 “1회 클레임”을 기본 적용합니다. :contentReference[oaicite:3]{index=3}</div>
+            <div class="tiny">※ 중복 수령 방지를 위해 서버에서 IP 기반 “1회 클레임”을 기본 적용합니다. :- </div>
             <div style="height:10px"></div>
             <input id="nickname" maxlength="20" placeholder="예) 위캔드무드 / 184 / 80" />
             <div style="height:10px"></div>
@@ -155,3 +155,4 @@
   </script>
 </body>
 </html>
+
